syntax = "proto3";

package isms.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "isms/api/isms/v1;v1";

// 工业软件主表数据结构
message IsmsSoftware {
  int64 id = 1; // 自增ID
  string name_zh = 2 [(validate.rules).string.min_len = 1]; // 软件中文名称
  string name_en = 3; // 软件英文名称
  string version = 4; // 版本号
  int32 release_year = 5; // 发布年份（如2023）
  int32 release_month = 6; // 发布月份（1-12，0表示仅精确到年）
  int32 release_day = 7; // 发布日（1-31，0表示仅精确到年或月）
  int32 developer_id = 8; // 开发商ID
  int32 country_id = 9; // 产地国家ID
  string countryName = 10; // 国家名称
  string developerName = 11; // 生产商名称
  string cpu_req = 12; // 处理器要求
  double memory_min_gb = 13; // 最小内存要求（GB）
  double disk_min_gb = 14; // 最小磁盘空间（GB）
  string sys_req_other = 15; // 其他系统要求
  string description = 16; // 软件描述
  int64 size_bytes = 17; // 软件大小（KB）
  string deployment_method = 18; // 部署方式
  string compliance_info = 19; // 合规性信息
  string security_info = 20; // 安全信息
  string intellectual_property = 21; // 知识产权信息
  string status = 22; // 状态（active：有效；inactive：下架；testing：测试中；discontinued：停止维护）
  repeated int32 industry_ids = 23; // 适用行业小类ID列表
  repeated int32 os_ids = 24; // 支持的操作系统ID列表
  string created_at = 25; // 创建时间
  string updated_at = 26; // 更新时间
}

// 创建软件请求
message CreateSoftwareReq {
  string name_zh = 1 [(validate.rules).string.min_len = 1]; // 软件中文名称
  string name_en = 2; // 软件英文名称
  string version = 3 [(validate.rules).string.min_len = 1]; // 版本号
  int32 release_year = 4; // 发布年份（如2023）
  int32 release_month = 5; // 发布月份（1-12，0表示仅精确到年）
  int32 release_day = 6; // 发布日（1-31，0表示仅精确到年或月）
  int32 developer_id = 7 [(validate.rules).int32.gt = 0]; // 开发商ID
  int32 country_id = 8 [(validate.rules).int32.gt = 0]; // 产地国家ID
  string cpu_req = 9; // 处理器要求
  double memory_min_gb = 10; // 最小内存要求（GB）
  double disk_min_gb = 11; // 最小磁盘空间（GB）
  string sys_req_other = 12; // 其他系统要求
  string description = 13; // 软件描述
  int64 size_bytes = 14; // 软件大小（KB）
  string deployment_method = 15; // 部署方式
  string compliance_info = 16; // 合规性信息
  string security_info = 17; // 安全信息
  string intellectual_property = 18; // 知识产权信息
  string status = 19; // 状态（active：有效；inactive：下架；testing：测试中；discontinued：停止维护）
  repeated int32 industry_ids = 20 [(validate.rules).repeated.min_items = 1]; // 适用行业小类ID列表
  repeated int32 os_ids = 21 [(validate.rules).repeated.min_items = 1]; // 支持的操作系统ID列表
}

// 创建软件响应
message CreateSoftwareResp {
  int64 id = 1; // 新创建的软件ID
  string message = 2; // 提示信息
}

// 更新软件请求
message UpdateSoftwareReq {
  int64 id = 1 [(validate.rules).int64.gt = 0]; // 必须指定ID
  string name_zh = 2; // 软件中文名称
  string name_en = 3; // 软件英文名称
  string version = 4; // 版本号
  int32 release_year = 5; // 发布年份（如2023）
  int32 release_month = 6; // 发布月份（1-12，0表示仅精确到年）
  int32 release_day = 7; // 发布日（1-31，0表示仅精确到年或月）
  int32 developer_id = 8; // 开发商ID
  int32 country_id = 9; // 产地国家ID
  string cpu_req = 10; // 处理器要求
  double memory_min_gb = 11; // 最小内存要求（GB）
  double disk_min_gb = 12; // 最小磁盘空间（GB）
  string sys_req_other = 13; // 其他系统要求
  string description = 14; // 软件描述
  int64 size_bytes = 15; // 软件大小（KB）
  string deployment_method = 16; // 部署方式
  string compliance_info = 17; // 合规性信息
  string security_info = 18; // 安全信息
  string intellectual_property = 19; // 知识产权信息
  string status = 20; // 状态（active：有效；inactive：下架；testing：测试中；discontinued：停止维护）
  repeated int32 industry_ids = 21; // 适用行业小类ID列表
  repeated int32 os_ids = 22; // 支持的操作系统ID列表
}

// 更新软件响应
message UpdateSoftwareResp {
  bool success = 1;
  string message = 2;
}

// 查询软件请求（支持分页和筛选）
message ListSoftwareReq {
  // 修正：proto3 不支持 "= 1" 这种默认值写法，默认值需通过业务代码处理
  int32 page = 1 [(validate.rules).int32.gte = 1]; // 页码，默认第1页
  int32 page_size = 2 [(validate.rules).int32.gte = 10]; // 每页条数，默认20（修正：移除 "= 20"）
  string keyword = 3; // 搜索关键词（名称、开发商）
  int32 country_id = 4; // 按国家筛选
  string status = 5; // 按状态筛选
  int32 developer_id = 6; // 按开发商筛选
  string category_code = 7; // 按类别筛选
}

// 查询软件响应
message ListSoftwareResp {
  int64 total = 1; // 总条数
  repeated IsmsSoftware items = 2; // 软件列表
  int32 page = 3;
  int32 page_size = 4;
}

// 工业软件
service Software {
  // 创建工业软件记录
  rpc CreateSoftware(CreateSoftwareReq) returns (CreateSoftwareResp) {
    option (google.api.http) = {
      post: "/v1/software"
      body: "*"
    };
  }

  // 更新工业软件记录
  rpc UpdateSoftware(UpdateSoftwareReq) returns (UpdateSoftwareResp) {
    option (google.api.http) = {
      put: "/v1/software/{id}"
      body: "*"
    };
  }

  // 分页查询工业软件记录
  rpc ListSoftware(ListSoftwareReq) returns (ListSoftwareResp) {
    option (google.api.http) = {
      get: "/v1/software"
    };
  }

  // 根据ID查询单个软件（修正：参数传递方式）
  rpc GetSoftwareById(GetSoftwareByIdReq) returns (IsmsSoftware) {
    option (google.api.http) = {
      get: "/v1/software/{id}"
    };
  }
}

// 新增：查询单个软件的请求（用于接收ID参数）
message GetSoftwareByIdReq {
  int64 id = 1 [(validate.rules).int64.gt = 0]; // 软件ID
}